// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse OpenAPI specs constructor() Propertly insert routes into database 1`] = `
Array [
  Object {
    "operationId": "echo",
    "requestBody": Object {
      "content": Object {
        "application/json": Object {
          "example": "{
  \\"message\\": \\"Hello Echo Server!\\"
}
",
          "schema": Object {
            "$ref": "#/components/schemas/EchoBody",
          },
        },
      },
      "description": "Message with some additional info from the server",
      "required": true,
    },
    "responses": Object {
      "200": Object {
        "content": Object {
          "application/json": Object {
            "example": "{
  \\"message\\": \\"Hello Echo Server!\\",
  \\"length\\": 18
}
",
            "schema": Object {
              "$ref": "#/components/schemas/EchoResponse",
            },
          },
        },
        "description": "Successfull echo",
      },
      "400": Object {
        "content": Object {
          "application/json": Object {
            "example": "{
  \\"error\\": \\"No message sent!\\"
}
",
            "schema": Object {
              "$ref": "#/components/schemas/EchoError",
            },
          },
        },
        "description": "No message sent",
      },
    },
    "summary": "Echo a string back",
  },
]
`;

exports[`Parse OpenAPI specs getRouteByOperationId() Get a route by its operation id 1`] = `
Object {
  "operationId": "echo",
  "requestBody": Object {
    "content": Object {
      "application/json": Object {
        "example": "{
  \\"message\\": \\"Hello Echo Server!\\"
}
",
        "schema": Object {
          "$ref": "#/components/schemas/EchoBody",
        },
      },
    },
    "description": "Message with some additional info from the server",
    "required": true,
  },
  "responses": Object {
    "200": Object {
      "content": Object {
        "application/json": Object {
          "example": "{
  \\"message\\": \\"Hello Echo Server!\\",
  \\"length\\": 18
}
",
          "schema": Object {
            "$ref": "#/components/schemas/EchoResponse",
          },
        },
      },
      "description": "Successfull echo",
    },
    "400": Object {
      "content": Object {
        "application/json": Object {
          "example": "{
  \\"error\\": \\"No message sent!\\"
}
",
          "schema": Object {
            "$ref": "#/components/schemas/EchoError",
          },
        },
      },
      "description": "No message sent",
    },
  },
  "summary": "Echo a string back",
}
`;
